Inicia a implementação dos testes